<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="scanner_prompt">Scan ISBN</string>
    <string name="error_no_network">Can\'t add book when their is no network available.</string>
    <string name="error_invalid_barcode">This bar code does not represent an ISBN number</string>
    <string name="invalid_barcode_dialog_title">Invalid Barcode</string>
    <string name="title_activity_add_book">AddBookActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_book_detail">Book detail</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_about">About this App</string>
    <string name="action_delete">Delete book</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_added_toast">%1$s was added to your library.</string>
    <string name="search_hint">Search books</string>
    <string name="book_already_added">This book is already in your collection.</string>
    <string name="bookCoverTransition">bookcover</string>
</resources>
